[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["daria425 <darianaumova5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyterlab = "^4.2.2"
python-dotenv = "^1.0.1"
openai = "^1.35.1"
pandas = "^2.2.2"
langchain = "^0.2.5"
langchain-core = "^0.2.9"
langchain-community = "^0.2.5"
esprima = "^4.0.1"
tree-sitter-languages = "^1.10.2"
langchain-openai = "^0.1.8"
langchain-chroma = "^0.1.1"
langchain-experimental = "^0.0.61"
tabulate = "^0.9.0"
transformers = {extras = ["torch"], version = "^4.41.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
